[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Hero_Block.png" type="Texture" id=1]
[ext_resource path="res://scripts/HeroBlock.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="HeroBlock" type="KinematicBody2D"]
collision_mask = 7
moving_platform_apply_velocity_on_leave = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="DropTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
bus = "FX"

[node name="Point_fx" type="AudioStreamPlayer2D" parent="."]
bus = "FX"

[connection signal="timeout" from="DropTimer" to="." method="_on_DropTimer_timeout"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
[connection signal="finished" from="Point_fx" to="." method="_on_Point_fx_finished"]
